# AMeSS

./: CMakeLists.txt  README.md  main.cpp
src/: URSocket.cpp  URSocket.h  Vimba.cpp  Vimba.h  cameraCalibrationSettings.xml  cameraOperatingSettings.xml
